# botuxtestautomation

./: .gitignore  BOTTestAutomation_COMPLETE_SPEC.md  README.md  pyproject.toml  requirements.txt  run.py  start.sh  stop.sh  test.sh  test_stealth.py
backend/: .env  .env.example  analytics.py  database.py  engine.py  intelligent_testing.py  journey_engine.py  llm_evaluator.py  main.py  mcp_browser.py  models.py  reasoning.py  report_generator.py  reporter.py  requirements.txt  results.db  security.py  test_gemini_api.py  utterances.py
config/: allowlist.json  mock_data.json  settings.yaml
docs/: AGENTS.md  CLAUDE.md  CODE_REVIEW.md  FEATURES.md  SKILLS.md  TESTING.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsDashboard.tsx  ConfigPanel.tsx  ConversationTable.tsx  ExportButtons.tsx  IntelligentTestingPanel.tsx  JourneyTestPanel.tsx  KPICards.tsx  SettingsPanel.tsx  TopBar.tsx  TutorialsPanel.tsx
frontend/src/hooks/: useTestResults.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
scenarios/: citi_bot.yaml  citi_credit_card_inquiry.yaml  example_basic.yaml
tests/: conftest.py  test_engine.py  test_mcp_browser.py  test_models.py  test_reasoning.py  test_security.py
tests/fixtures/: mock_chatbot.html
